# SouiEditor

./: .gitignore  Build.bat  CMakeLists.txt  LICENSE  readme.md
ExtendCtrls/: CMakeLists.txt  ExtendCtrls.pro  ExtendCtrls.vcproj  SCtrlsRegister.cpp  stdafx.h
Scintilla/: CMakeLists.txt
Scintilla/include/: Platform.h  Scintilla.h
Scintilla/src/: Catalogue.cxx  ExternalLexer.h  UniConversion.cxx  UniConversion.h
Scintilla/win32/: HanjaDic.cxx  PlatWin.cxx  ScintillaWin.cxx
copy_files/: CMakeLists.txt
depends/soui4/include/swinx/include/: wnd.h
depends/soui4/lib/Win32/: soui4.lib
uiPreview/: CMakeLists.txt  LayoutAdapter.cpp  MainDlg.cpp  MainDlg.h  PathMonitor.cpp  stdafx.h  uiPreview.cpp  uiPreview.pro  uiPreview.vcproj
uiPreview/monitor/: PathMonitor.cpp
uiPreview/res/: resource.h
uiPreview/src/: DropTarget.h  LayoutAdapter.cpp  LayoutAdapter.h  MainDlg.cpp  MainDlg.h
uieditor/: CDebug.h  CMakeLists.txt  DesignWnd.cpp  MainDlg.cpp  MainDlg.h  ResManger.cpp  ResManger.h  SImageBtnEx.h  SImgCanvas.cpp  SImgCanvas.h  SSwitch.cpp  SSwitch.h  SToolBar.cpp  SToolBar.h  ScintillaWnd.cpp  SouiEditor.cpp  SouiRealWndHandler.cpp  SouiRealWndHandler.h  SysdataMgr.cpp  SysdataMgr.h  XmlEditor.cpp  XmlEditor.h  XmlParser.cpp  helpapi.cpp  souidlgs.h  stdafx.h  uieditor.pro  uieditor.vcproj
uieditor/Config/: Ctrl.xml  Skin.xml
uieditor/Dialog/: DlgAbout.h  DlgCreatePro.h  DlgInput.h  DlgInsertXmlElement.cpp  DlgInsertXmlElement.h  DlgNewLayout.cpp  DlgNewLayout.h  DlgResMgr.cpp  DlgResMgr.h
uieditor/res/: resource.h
uieditor/uires/: uires.idx
uieditor/uires/values/: skin.xml  string.xml
uieditor/uires/xml/: dlg_insert_element.xml  dlg_main.xml  dlg_uidesigner.xml
uiviewer/: Adapter.cpp  Adapter.h  CMakeLists.txt  PreviewContainer.cpp  PreviewHost.cpp  PreviewHost.h  uiviewer.cpp  uiviewer.pro  uiviewer.vcproj
